replaced circles with rounded rectangles, added start and end date

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
     stroke-width: 1px;
 }
 
-.graph-body .line circle {
+.graph-body .line circle, .graph-body .line rect {
     opacity: 0.1;
 }
 
